k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: polling
  labels:
    app: poll-app
    app.kubernetes.io/name: secure-polling-app
